--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
-            <p>Monday to Wednesday<br>10-12 December</p> -->
-        </div>
+            <p>Monday to Wednesday<br>10-12 December</p> 
+        </div> -->
       </div>
       </div>
     </section><!-- End About Section -->
