--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#organizers">Organizers</a></li>
+          <li><a class="nav-link scrollto" href="#speakers">Organizers</a></li>
           <li><a class="nav-link scrollto" href="#pastEvents">Past Events</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -184,7 +184,7 @@
         </div>
       </div>
 
-    </section><!-- End Speakers Section -->
+    </section><!-- End Organizations Section -->
 
 
 
